Footer - Icon and Image alignment - Fixed

--- a/tetrapak-publicweb/ui.dev/src/source/templates/components/footer/_footer.scss
+++ b/tetrapak-publicweb/ui.dev/src/source/templates/components/footer/_footer.scss
@@ -60,6 +60,7 @@
     &__social-media {
         @media #{$desktop} {
             display: flex;
+            justify-content: flex-end;
         }
         @media #{$small-desktop} {
             display: block;
